# Cyberspace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/cyberspace_ssg/: __main__.py  build.py  changelog_template.dj  config.py  formats.py  git.py  serve.py
src/cyberspace_ssg/filters/: alerts.py  checkbox.py  emoji.py  include.py  macros.py  mermaid.py  syntax_highlighting.py  tabs.py  title.py
text/: 404.dj  index.dj
text/pages/: home.dj  subscribe.dj
text/pages/posts/: index.dj  test_page.dj
text/pages/projects/: index.dj
web/layouts/: hack.css  main.css  pygments.css
